--- a/client/src/components/RegisterForm.css
+++ b/client/src/components/RegisterForm.css
@@ -1,10 +1,10 @@
 .form-container {
-  margin: 100px auto;
-  width: 1000px;
+  margin: 50px auto;
+  width: 1100px;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
   position: relative;
   border-radius: 10px;
-  height: 600px;
+  height: 650px;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
@@ -30,8 +30,8 @@
 }
 
 .form-img {
-  width: 80%;
-  height: 80%;
+  width: 70%;
+  height: 60%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -96,7 +96,7 @@
   display: inline-block;
   font-size: 0.8rem;
   margin-bottom: 6px;
-  color: #fff;
+  color: #FF7600;
 }
 
 .form-input {
@@ -116,7 +116,7 @@
 
 .form-input-btn {
   width: 30%;
-  height: 70px;
+  height: 40px;
   margin-top: 10px;
   border-radius: 2px;
   background: linear-gradient(
