--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -6,35 +6,34 @@
   );
   height: 80px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   font-size: 1.2rem;
 }
 
-.navbar-logo {
-  color: #fff;
-  justify-self: start;
+.navlogo {
+  justify-content: center;
+  align-items: center;
   margin-left: 20px;
   cursor: pointer;
-  font-family: "Josefin Sans", sans-serif;
-}
+} 
+.menu-group{
+  display:flex;
 
-.fa-react {
-  margin-left: 0.5rem;
-  font-size: 1.6rem;
 }
-
 .nav-menu {
   display: grid;
   grid-template-columns: repeat(4, auto);
   grid-gap: 10px;
   list-style: none;
   text-align: center;
-  width: 60vw;
+  /* width: 70vw; */
   justify-content: end;
   margin-right: 5rem;
 }
-
+.sign-btn{
+  margin-right: 5rem;
+}
 .nav-links {
   color: white;
   text-decoration: none;
@@ -58,10 +57,10 @@
 .menu-icon {
   display: none;
 }
-/*#logo {
+#logo {
   width: 200px;
   display: flex;
-}*/
+}
 
 @media screen and (max-width: 960px) {
   .NavbarItems {
@@ -72,7 +71,7 @@
     flex-direction: column;
     width: 100%;
     height: 400px;
-    position: absolute;
+  position: absolute;
     top: 80px;
     left: -100%;
     opacity: 1;
@@ -134,6 +133,7 @@
 
   Button {
     display: none;
+    position: unset!important;
   }
   #logo {
     margin-top: 0px;
