--- a/client/src/components/Posts.css
+++ b/client/src/components/Posts.css
@@ -3,7 +3,7 @@
   width: 1500px;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  display: flex;
+
 }
 .cards {
     font-family: 'Cardo', serif;
@@ -13,7 +13,7 @@
       margin-bottom: 10px;
       width: 60%;
       height: 30%;
-      
+      display: inline-block;
 }
 .post {
     margin-top: 30px;
